# andromeda

./: .clang-format  .gitignore  CMakeLists.txt  README.md
lib/base64/: CMakeLists.txt
lib/mbedtls/: CMakeLists.txt
lib/mbedtls/include/mbedtls/: mbedtls_config.h
lib/mongoose/: mongoose.c  mongoose.h
res/: dictionary.txt
src/: auth.cpp  auth.hpp  authconst.hpp  config.cpp  config.hpp  crypto.cpp  db.cpp  db.hpp  handler.cpp  handler.hpp  main.cpp  ratelimit.cpp  ratelimit.hpp  server.cpp  server.hpp  util.cpp  util.hpp
src/handlers/: about.cpp  about.hpp  discord.cpp  discord.hpp  game.cpp  game.hpp  index.cpp  index.hpp  login.cpp  login.hpp  og.cpp  og.hpp  register.cpp  register.hpp  short.cpp  short.hpp
static/: hi.txt
static/browser_stuff/: site.webmanifest
static/css/: short.css
static/js/: discord.js  game.js  register.js  short.js
templates/: about.html  base.html  discord.html  game.html  index.html  login.html  og.html  register.html  short.html
